# django-celery

./: .gitignore  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
core/: celery.py  settings.py
