[tool.poetry]
name = "django-celery-project"
version = "0.1.0"
description = ""
authors = ["Shrine Sabu <shrine02sabu@gmail.com>"]
readme = "README.md"
packages = [{include = "django_celery_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
